--- a/RafelFinalProj/App.xaml
+++ b/RafelFinalProj/App.xaml
@@ -1,8 +1,15 @@
 ﻿<Application x:Class="RafelFinalProj.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:RafelFinalProj"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="RoundedTextbox.xaml"/>
+                <ResourceDictionary Source="RoundedButton.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
