--- a/RafelFinalProj/MainWindow.xaml
+++ b/RafelFinalProj/MainWindow.xaml
@@ -1,9 +1,193 @@
 ﻿<Window x:Class="RafelFinalProj.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:RafelFinalProj"
+        mc:Ignorable="d"
+        Title="WireShark Analayzer" Height="689.135" Width="800">
+    <Window.Resources>
+        <SolidColorBrush x:Key="brushWatermarkBackground" Color="White" />
+        <SolidColorBrush x:Key="brushWatermarkForeground" Color="LightSteelBlue" />
+        <SolidColorBrush x:Key="brushWatermarkBorder" Color="Black" />
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <local:TextInputToVisibilityConverter x:Key="TextInputToVisibilityConverter" />
+        <Style x:Key="EntryFieldStyle" TargetType="Grid" >
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+    </Window.Resources>
     <Grid>
-     <!----> 
-     <!--Branch comment-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <!--Load Files Group box-->
+        <GroupBox Header="Load Files" Grid.Row="0" Padding="10" Margin="10 10" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+            <StackPanel>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <!--Load files text boxes and buttons-->
+                    <!--Wireshark Log file TB-->
+                    <Grid Grid.Row="0" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Wireshark Log File" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=wiresharkLogTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="wiresharkLogTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
+                    </Grid>
+                    <!--Wireshark Log file button-->
+                    <Button Grid.Row="0" Grid.Column="1" Margin="5 10" Content="Browse" Name="wiresharkLogBrowseBTN" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <!--XML file TB-->
+                    <Grid Grid.Row="1" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="XML File" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=xmlLoadTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="xmlLoadTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
+                    </Grid>
+                    <!--XML file button-->
+                    <Button Grid.Row="1" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <!--Save ini file TB-->
+                    <Grid Grid.Row="2" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Save ini File To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=iniSaveTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="iniSaveTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Save ini file button-->
+                    <Button Grid.Row="2" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <!--Save Log file to TB-->
+                    <Grid Grid.Row="3" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Save Log File To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=logSaveTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="logSaveTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Save Log file to button-->
+                    <Button Grid.Row="3" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                </Grid>
+            </StackPanel>
+        </GroupBox>
+        <!--Filters Groupbox-->
+        <GroupBox Header="Filters" Grid.Row="1" Padding="10" Margin="10 10" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+            <StackPanel>
+                <Grid Grid.IsSharedSizeScope="True">
+                    <Grid.RowDefinitions>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                        <RowDefinition SharedSizeGroup="A"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <!--Port From TB-->
+                    <Grid Grid.Row="0" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Port From" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=portFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="portFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Port To TB-->
+                    <Grid Grid.Row="0" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Port To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=portToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="portToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Packet Size From TB-->
+                    <Grid Grid.Row="1" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Packet Size From" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=packetSizeFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="packetSizeFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Packet Size To TB-->
+                    <Grid Grid.Row="1" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Packet Size To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=packetSizeToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="packetSizeToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--IP Source From TB-->
+                    <Grid Grid.Row="2" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="IP Source From" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=ipSrcFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="ipSrcFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--IP Source To TB-->
+                    <Grid Grid.Row="2" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="IP Source To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=ipSrcToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="ipSrcToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--IP Destination From TB-->
+                    <Grid Grid.Row="3" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="IP Destination From" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=ipDestFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="ipDestFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--IP Destination To TB-->
+                    <Grid Grid.Row="3" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="IP Destination To" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=ipDestToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="ipDestToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Offset TB-->
+                    <Grid Grid.Row="4" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                        <TextBlock Margin="5,2" Text="Offset" Foreground="{StaticResource brushWatermarkForeground}" 
+                       Visibility="{Binding ElementName=offsetTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBox Name="offsetTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                    </Grid>
+                    <!--Protocol RBs-->
+                    <Grid Grid.Row="5" Grid.Column="0">
+                        <TextBlock Margin="3,5" Text="Protocol:" TextAlignment="Center"></TextBlock>
+                    </Grid>
+                    <Grid Grid.Row="5" Grid.Column="1">
+                        <RadioButton x:Name="tcpRB" GroupName="protocol" Content="TCP" VerticalAlignment="Center" HorizontalAlignment="Center" ClickMode="Press" IsChecked="True"/>
+                    </Grid>
+                    <Grid Grid.Row="5" Grid.Column="2">
+                        <RadioButton x:Name="udpRB" GroupName="protocol" Content="UDP" VerticalAlignment="Center" HorizontalAlignment="Left" ClickMode="Press"/>
+                    </Grid>
+                    <!--IP RBs-->
+                    <Grid Grid.Row="6" Grid.Column="0">
+                        <TextBlock Margin="3,5" Text="IP Version:" TextAlignment="Center"></TextBlock>
+                    </Grid>
+                    <Grid Grid.Row="6" Grid.Column="1">
+                        <RadioButton x:Name="ipv4RB" GroupName="ipVersion" Content="IPv4" VerticalAlignment="Center" HorizontalAlignment="Center" ClickMode="Press" IsChecked="True"/>
+                    </Grid>
+                    <Grid Grid.Row="6" Grid.Column="2">
+                        <RadioButton x:Name="ipv6RB" GroupName="ipVersion" Content="IPv6" VerticalAlignment="Center" HorizontalAlignment="Left" ClickMode="Press"/>
+                    </Grid>
+                </Grid>
+            </StackPanel>
+        </GroupBox>
+        <StackPanel Grid.Row="2">
+            <Grid Height="Auto">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Button Name="startScanBTN" Grid.Row="1" Grid.Column="1" Margin="7 10" Padding="100" Content="Start Scan" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                <Button Name="stopScanBTN" Grid.Row="1" Grid.Column="2" Margin="7 10" Content="Stop Scan" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+            </Grid>
+        </StackPanel>
+        <ListView HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinHeight="200" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="5, 20"/>
+
     </Grid>
 </Window>
