--- a/RafelFinalProj/MainWindow.xaml
+++ b/RafelFinalProj/MainWindow.xaml
@@ -187,7 +187,14 @@
                 <Button Name="stopScanBTN" Grid.Row="1" Grid.Column="2" Margin="7 10" Content="Stop Scan" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
             </Grid>
         </StackPanel>
-        <ListView HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinHeight="200" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="5, 20"/>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="3*" />
+            </Grid.RowDefinitions>
+            <Label Content="Notifications" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+        </Grid>
+        <ListView Name="sysNotificationsLV" Background="LightGray" BorderBrush="Black" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="0" Height="440" Grid.Column="1" Grid.RowSpan="2" Margin="5, 20"/>
 
     </Grid>
 </Window>
