--- a/RafelFinalProj/MainWindow.xaml
+++ b/RafelFinalProj/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RafelFinalProj"
-        mc:Ignorable="d"
-        Title="WireShark Analayzer" Height="689.135" Width="800">
+        mc:Ignorable="d"      
+        Title="WireShark Analayzer" Height="689.135" Width="800" MinHeight="689.135" MinWidth="800">
     <Window.Resources>
         <SolidColorBrush x:Key="brushWatermarkBackground" Color="White" />
         <SolidColorBrush x:Key="brushWatermarkForeground" Color="LightSteelBlue" />
@@ -46,34 +46,34 @@
                     <Grid Grid.Row="0" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Wireshark Log File" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=wiresharkLogTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                        <TextBox Name="wiresharkLogTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
+                        <TextBox Name="wiresharkLogTB" IsEnabled="False" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
                     </Grid>
                     <!--Wireshark Log file button-->
-                    <Button Grid.Row="0" Grid.Column="1" Margin="5 10" Content="Browse" Name="wiresharkLogBrowseBTN" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <Button Grid.Row="0" Grid.Column="1" Margin="5 10" Content="Browse" Name="wiresharkLogBrowseBTN" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold" Click="wiresharkLogBrowseBTN_Click"/>
                     <!--XML file TB-->
                     <Grid Grid.Row="1" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="XML File" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=xmlLoadTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                        <TextBox Name="xmlLoadTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
+                        <TextBox Name="xmlLoadTB" IsEnabled="False" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}"/>
                     </Grid>
                     <!--XML file button-->
-                    <Button Grid.Row="1" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <Button Grid.Row="1" Grid.Column="1" Name="xmlLoadBTN" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold" Click="xmlLoadBTN_Click"/>
                     <!--Save ini file TB-->
                     <Grid Grid.Row="2" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Save ini File To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=iniSaveTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                        <TextBox Name="iniSaveTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                        <TextBox Name="iniSaveTB" IsEnabled="False" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Save ini file button-->
-                    <Button Grid.Row="2" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <Button Name="iniSaveBTN" Grid.Row="2" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold" Click="iniSaveBTN_Click"/>
                     <!--Save Log file to TB-->
                     <Grid Grid.Row="3" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Save Log File To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=logSaveTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                        <TextBox Name="logSaveTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
+                        <TextBox Name="logSaveTB" IsEnabled="False" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Save Log file to button-->
-                    <Button Grid.Row="3" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold"/>
+                    <Button Name="logSaveBTN" Grid.Row="3" Grid.Column="1" Margin="5 10" Content="Browse" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold" Click="logSaveBTN_Click"/>
                 </Grid>
             </StackPanel>
         </GroupBox>
@@ -96,62 +96,67 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <!--Port From TB-->
-                    <Grid Grid.Row="0" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Label Grid.Row="0" Grid.Column="0" Content="Port From - To:" HorizontalAlignment="Left" FontWeight="Bold"></Label>
+                    <Grid Grid.Row="0" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Port From" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=portFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="portFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Port To TB-->
-                    <Grid Grid.Row="0" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Grid Grid.Row="0" Grid.Column="2" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Port To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=portToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="portToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Packet Size From TB-->
-                    <Grid Grid.Row="1" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Label Grid.Row="1" Grid.Column="0" Content="Packet Size From - To:" HorizontalAlignment="Left" FontWeight="Bold"></Label>
+                    <Grid Grid.Row="1" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Packet Size From" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=packetSizeFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="packetSizeFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Packet Size To TB-->
-                    <Grid Grid.Row="1" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Grid Grid.Row="1" Grid.Column="2" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Packet Size To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=packetSizeToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="packetSizeToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--IP Source From TB-->
-                    <Grid Grid.Row="2" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Label Grid.Row="2" Grid.Column="0" Content="IP Source From - To:" HorizontalAlignment="Left" FontWeight="Bold"></Label>
+                    <Grid Grid.Row="2" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="IP Source From" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=ipSrcFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="ipSrcFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--IP Source To TB-->
-                    <Grid Grid.Row="2" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Grid Grid.Row="2" Grid.Column="2" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="IP Source To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=ipSrcToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="ipSrcToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--IP Destination From TB-->
-                    <Grid Grid.Row="3" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Label Grid.Row="3" Grid.Column="0" Content="IP Destination From - To:" HorizontalAlignment="Left" FontWeight="Bold"></Label>
+                    <Grid Grid.Row="3" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="IP Destination From" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=ipDestFromTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="ipDestFromTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--IP Destination To TB-->
-                    <Grid Grid.Row="3" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Grid Grid.Row="3" Grid.Column="2" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="IP Destination To" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=ipDestToTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="ipDestToTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Offset TB-->
-                    <Grid Grid.Row="4" Grid.Column="0" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
+                    <Label Grid.Row="4" Grid.Column="0" Content="Offset:" HorizontalAlignment="Left" FontWeight="Bold"></Label>
+                    <Grid Grid.Row="4" Grid.Column="1" Margin="5" Background="{StaticResource brushWatermarkBackground}" Style="{StaticResource EntryFieldStyle}" >
                         <TextBlock Margin="5,2" Text="Offset" Foreground="{StaticResource brushWatermarkForeground}" 
                        Visibility="{Binding ElementName=offsetTB, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <TextBox Name="offsetTB" BorderBrush="{StaticResource brushWatermarkBorder}" Style="{DynamicResource RoundedTextbox}" />
                     </Grid>
                     <!--Protocol RBs-->
                     <Grid Grid.Row="5" Grid.Column="0">
-                        <TextBlock Margin="3,5" Text="Protocol:" TextAlignment="Center"></TextBlock>
+                        <TextBlock Margin="3,5" Text="Protocol:" TextAlignment="Left" FontWeight="Bold"></TextBlock>
                     </Grid>
                     <Grid Grid.Row="5" Grid.Column="1">
                         <RadioButton x:Name="tcpRB" GroupName="protocol" Content="TCP" VerticalAlignment="Center" HorizontalAlignment="Center" ClickMode="Press" IsChecked="True"/>
@@ -161,7 +166,7 @@
                     </Grid>
                     <!--IP RBs-->
                     <Grid Grid.Row="6" Grid.Column="0">
-                        <TextBlock Margin="3,5" Text="IP Version:" TextAlignment="Center"></TextBlock>
+                        <TextBlock Margin="3,5" Text="IP Version:" TextAlignment="Left" FontWeight="Bold"></TextBlock>
                     </Grid>
                     <Grid Grid.Row="6" Grid.Column="1">
                         <RadioButton x:Name="ipv4RB" GroupName="ipVersion" Content="IPv4" VerticalAlignment="Center" HorizontalAlignment="Center" ClickMode="Press" IsChecked="True"/>
@@ -195,6 +200,6 @@
             <Label Content="Notifications" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
         </Grid>
         <ListView Name="sysNotificationsLV" Background="LightGray" BorderBrush="Black" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="0" Height="440" Grid.Column="1" Grid.RowSpan="2" Margin="5, 20"/>
-
+        <Button Name="clearNotificationsBTN" VerticalAlignment="Top" Grid.Row="2" Grid.Column="1" Margin="50 10" Content="Clear Notifications" Style="{DynamicResource RoundedButton}" Foreground="White" FontWeight="Bold" Click="clearNotificationsBTN_Click"/>
     </Grid>
 </Window>
