--- a/RafelFinalProj/MainScreen.xaml
+++ b/RafelFinalProj/MainScreen.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="RafelFinalProj.MainWindow"
+﻿<Window x:Class="RafelFinalProj.MainScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RafelFinalProj"
         mc:Ignorable="d"      
-        Title="WireShark Analayzer" Height="689.135" Width="800" MinHeight="689.135" MinWidth="800">
+        Title="WireShark Analayzer" Height="689.135" Width="956" MinHeight="689.135" MinWidth="800" Icon="animals-shark-icon-2.png">
     <Window.Resources>
         <SolidColorBrush x:Key="brushWatermarkBackground" Color="White" />
         <SolidColorBrush x:Key="brushWatermarkForeground" Color="LightSteelBlue" />
